[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "correlate"
author = "Larry Hastings"
author-email = "larry@hastings.org"
home-page = "https://github.com/larryhastings/correlate/"
requires-python = ">=3.6"
description-file = "README.md"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3 :: Only",
    ]
